--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+<!-- Favicon required-->
+<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/site.webmanifest">
+<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 
+<!-- end favicon-->
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>+</title>
+	<title>Shiv</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -41,6 +50,7 @@
 
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
+
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
@@ -106,7 +116,7 @@
 
    				<img src="images/profile-pic.png" alt="Profile Picture">
 
-   				<p class="lead">Passionate about Tech & Data 🖥️⌨️ <br> Love for 🎾 Tennis<br> Empathy, Integrity, & Passion make me stand out I believe + I love challenges.</p>
+   				<p class="lead">Passionate about Tech & Data 🖥️ ⌨️ <br> Love for 🎾 Tennis<br> Empathy, Integrity, and Passion make me stand + I love challenges.</p>
    			</div>
 
    		</div>   		
@@ -178,8 +188,8 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Get in Touch</a>
+   			<!--<a href="#" title="Download CV" class="button button-primary">Download CV</a>-->
    		</div>   		
    	</div>
 
@@ -481,7 +491,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/portfolio/modals/blockchain.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
