update 4th time

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
    				<img src="images/profile-pic.png" alt="Profile Picture">
 
-   				<p class="lead">Passionate about Tech & Data 🖥️ ⌨️ <br> Love for 🎾 Tennis<br> Empathy, Integrity, and Passion make me stand + I love challenges.</p>
+   				<p class="lead">Passionate about Tech & Data 🖥️ ⌨️ <br> Love for 🎾 Tennis<br> Empathy, Integrity, and Passion make me standout + I love challenges.</p>
    			</div>
 
    		</div>   		
@@ -232,7 +232,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Illinois Institute of Technology</h4>
-	   					<p>| Software Engineer skills | Research | Machine Learning models | codes | Scrapping | 
+	   					<p>| Software Engineer skills | Research | Machine Learning models | codes | Scrapping | Web Application |
 						   <br> Research on S&P 500 and PrivCo companies.</p>
 	   				</div>
 
@@ -251,7 +251,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>CoinGenius</h4>
-	   					<p>| Findings on correlation between bitcoin and 5+ influence factors |</p>
+	   					<p>| Findings on correlation between bitcoin and 5+ influencing factors |</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
